--- a/src/app/cliente/crear-cliente/crear-cliente.component.css
+++ b/src/app/cliente/crear-cliente/crear-cliente.component.css
@@ -1,9 +1,8 @@
 .color-button{
   background-color: #496bb7;
 }
-.font-size {
+.font-family {
   font-family: 'Baloo 2', cursive;
-  font-size: 18px;
 }
 .font-size-tittle {
   font-family: 'Baloo 2', cursive;
