--- a/src/app/ejercicio/crear-ejercicio/crear-ejercicio.component.html
+++ b/src/app/ejercicio/crear-ejercicio/crear-ejercicio.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex font-size" id="wrapper">
+<div class="d-flex font-family" id="wrapper">
     <div class="bg-light border-right" id="sidebar-wrapper">
         <div class="sidebar-heading">MENU </div>
         <hr>
@@ -43,7 +43,7 @@
                         <option *ngFor="let tipoMusculo of tiposMusculos; let i=index" [value]=tipoMusculo>
                             {{tipoMusculo.descripcion}}</option>
                     </select>
-                    <label for="floatingTipoMusculo" class="color-label">Tipo Musculo</label>
+                    <label for="floatingTipoMusculo" class="color-label">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tipo Musculo</label>
                 </div>
             </div>
             <div class="row mb-3">
