cambios en rediseño 3#

--- a/src/app/cliente/crear-cliente/crear-cliente.component.html
+++ b/src/app/cliente/crear-cliente/crear-cliente.component.html
@@ -25,7 +25,7 @@
             </div>
             <div class="row">
                 <div class="col" align="center">
-                    <h2 class="font-color font-size-tittle">CREAR CLIENTE</h2>
+                    <h2 class="color-label font-size-tittle">CREAR CLIENTE</h2>
                 </div>
             </div>
             <div class="row mb-3">
