--- a/src/app/ejercicio/leer-ejercicio/leer-ejercicio.component.html
+++ b/src/app/ejercicio/leer-ejercicio/leer-ejercicio.component.html
@@ -25,7 +25,7 @@
             </div>
             <div class="row">
                 <div class="col-12" align="center">
-                    <h2 class="font-color font-size-tittle">EJERCICIOS</h2>
+                    <h2 class="color-label font-size-tittle">EJERCICIOS</h2>
                 </div>
             </div>
             <div class="input-group mb-3">
