--- a/src/app/plan/leer-medida/leer-medida.component.html
+++ b/src/app/plan/leer-medida/leer-medida.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex myfont" id="wrapper">
+<div class="d-flex font-family" id="wrapper">
     <div class="bg-light border-right" id="sidebar-wrapper">
         <div class="sidebar-heading">MENU </div>
         <hr>
@@ -11,59 +11,45 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom justify">
             <button class="btn btn-ligth" id="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></button>
             <span class="separate"></span>
-            <a class="navbar-brand" href="#">{{app}}</a>
+            <a class="navbar-brand" href="#"></a>
         </nav>
         <div class="container">
             <div class="row">
-                <div class="col-sm" align="center">
-                    <hr>
-                    <h2>MEDIDAS</h2>
-                    <hr>
+                <img src="{{prefijoUrlImagenes+logo[0].valor}}" class="esp-image" alt="...">
+            </div>
+            <div class="row">
+                <div class="col-12" align="center">
+                    <h2 class="color-label font-size-tittle">MEDIDAS</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="card-group col-sm">
                     <div class="card">
                         <div class="card-body">
-                            <h2 class="card-title">{{usuario.nombre}}</h2>
+                            <h2 class="card-title color-label d-flex justify-content-center">{{usuario.nombre}}</h2>
                         </div>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item d-flex">
-                                <span class="justify-content-start">
-                                    IDENTIFICACION
-                                </span>
-                                <span class="justify-content-end ml-auto">
-                                    {{usuario.identificacion}}
-                                </span>
+                            <li class="list-group-item font-color d-flex justify-content-center">
+                                    IDENTIFICACION: {{usuario.identificacion}}
                             </li>
-                            <li class="list-group-item d-flex">
-                                <span class="justify-content-start">
-                                    TALLA
-                                </span>
-                                <span class="justify-content-end ml-auto">
-                                    {{usuario.talla}}
-                                </span>
+                            <li class="list-group-item font-color d-flex justify-content-center">
+                                TALLA: {{usuario.talla}}
                             </li>
-                            <li class="list-group-item d-flex">
-                                <span class="justify-content-start">
-                                    EDAD
-                                </span>
-                                <span class="justify-content-end ml-auto">
-                                    {{usuario.edad}}
-                                </span>
+                            <li class="list-group-item font-color d-flex justify-content-center">
+                                    EDAD: {{usuario.edad}}
                             </li>
                             <li class="list-group-item">
                                 <div class="row">
-                                    <div class="col-sm" style="text-align: center;">
+                                    <div class="d-grid gap-1" style="text-align: center;">
                                         <button (click)="suscripcionesVer()"
-                                            class="btn btn-sm btn-block btn-primary">VER SUSCRIPCIONES</button>
+                                            class="btn btn-sm btn-primary color-button">VER SUSCRIPCIONES</button>
                                     </div>
                                 </div>
                             </li>
                             <li class="list-group-item">
                                 <div class="row">
-                                    <div class="col-sm" style="text-align: center;">
-                                        <button (click)="pesosVer()" class="btn btn-sm btn-block btn-primary">
+                                    <div class="d-grid gap-1" style="text-align: center;">
+                                        <button (click)="pesosVer()" class="btn btn-sm btn-primary color-button">
                                             VER PESOS
                                         </button>
                                     </div>
@@ -71,8 +57,8 @@
                             </li>
                             <li class="list-group-item">
                                 <div class="row">
-                                    <div class="col-sm" style="text-align: center;">
-                                        <button (click)="observacionesVer()" class="btn btn-sm btn-block btn-primary">
+                                    <div class="d-grid gap-1" style="text-align: center;">
+                                        <button (click)="observacionesVer()" class="btn btn-sm btn-primary color-button">
                                             VER OBSERVACIONES
                                         </button>
                                     </div>
@@ -80,8 +66,8 @@
                             </li>
                             <li class="list-group-item">
                                 <div class="row">
-                                    <div class="col-sm" style="text-align: center;">
-                                        <button (click)="objetivosVer()" class="btn btn-sm btn-block btn-primary">
+                                    <div class="d-grid gap-1" style="text-align: center;">
+                                        <button (click)="objetivosVer()" class="btn btn-sm btn-primary color-button">
                                             VER OBJETIVOS
                                         </button>
                                     </div>
@@ -89,9 +75,9 @@
                             </li>
                             <li class="list-group-item">
                                 <div class="row">
-                                    <div class="col-sm" style="text-align: center;">
+                                    <div class="d-grid gap-1" style="text-align: center;">
                                         <a type="button" href="/leer-plan"
-                                            class="btn btn-sm btn-primary btn-block">
+                                            class="btn btn-sm btn-primary color-button">
                                             VER PLAN DE ENTRENAMIENTO
                                         </a>
                                     </div>
@@ -101,37 +87,26 @@
                     </div>
                 </div>
             </div>
-            <br>
-            <div class="row">
-                <div class="col-sm">
-                    <footer class="text-muted">
-                        <div class="container">
-                            <p>{{app}}</p>
-                            <p>Todos los derechos reservados 2021. </p>
-                        </div>
-                    </footer>
-                </div>
-            </div>
         </div>
     </div>
 </div>
 
 <ng-template #modalSuscripciones let-modal>
     <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">SUSCRIPCIONES</h4>
+        <h4 class="modal-title font-family color-label" id="modal-basic-title">SUSCRIPCIONES</h4>
         <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
     <div class="modal-body">
         <table class="table table-hover table-bordered" style="font-size: 0.7rem">
-            <thead class="table-active">
+            <thead class="table-active font-family font-color">
                 <tr>
                     <th>No.</th>
                     <th>FECHA</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="font-family font-color">
                 <tr *ngFor="let suscripcion of usuario.suscripciones; let i=index">
                     <td>{{i+1}}</td>
                     <td>{{suscripcion.fecha | DateShortPipe}}</td>
@@ -146,21 +121,21 @@
 
 <ng-template #modalPesos let-modal>
     <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">PESOS</h4>
+        <h4 class="modal-title font family color-label" id="modal-basic-title">PESOS</h4>
         <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
     <div class="modal-body">
         <table class="table table-hover table-bordered" style="font-size: 0.7rem">
-            <thead class="table-active">
+            <thead class="table-active font-family font-color">
                 <tr>
                     <th>No.</th>
                     <th>PESO</th>
                     <th>FECHA</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="font-family font-color">
                 <tr *ngFor="let peso of usuario.pesos; let i=index">
                     <td>{{i+1}}</td>
                     <td>{{peso.valor}} KG</td>
@@ -176,20 +151,20 @@
 
 <ng-template #modalObservaciones let-modal>
     <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">OBSERVACIONES</h4>
+        <h4 class="modal-title font-family color-label" id="modal-basic-title">OBSERVACIONES</h4>
         <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
     <div class="modal-body">
         <table class="table table-hover table-bordered" style="font-size: 0.7rem">
-            <thead class="table-active">
+            <thead class="table-active font-family font-color">
                 <tr>
                     <th>No.</th>
                     <th>OBSERVACION</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="font-family font-color">
                 <tr *ngFor="let observacion of usuario.observaciones; let i=index">
                     <td>{{i+1}}</td>
                     <td>{{observacion.descripcion}}</td>
@@ -204,20 +179,20 @@
 
 <ng-template #modalObjetivos let-modal>
     <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">OBJETIVOS</h4>
+        <h4 class="modal-title font-family color-label" id="modal-basic-title">OBJETIVOS</h4>
         <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
     <div class="modal-body">
         <table class="table table-hover table-bordered" style="font-size: 0.7rem">
-            <thead class="table-active">
+            <thead class="table-active font-family font-color">
                 <tr>
                     <th>No.</th>
                     <th>OBJETIVO</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="font-family font-color">
                 <tr *ngFor="let objetivo of usuario.objetivos; let i=index">
                     <td>{{i+1}}</td>
                     <td>{{objetivo.descripcion}}</td>
