--- a/src/app/plan/leer-medida/leer-medida.component.html
+++ b/src/app/plan/leer-medida/leer-medida.component.html
@@ -15,7 +15,7 @@
         </nav>
         <div class="container">
             <div class="row">
-                <img src="{{prefijoUrlImagenes+logo[0].valor}}" class="esp-image" alt="...">
+                <img src="{{prefijoUrlImagenes+logo}}" class="esp-image" alt="...">
             </div>
             <div class="row">
                 <div class="col-12" align="center">
@@ -99,7 +99,7 @@
         </button>
     </div>
     <div class="modal-body">
-        <table class="table table-hover table-bordered" style="font-size: 0.7rem">
+        <table class="table table-hover table-bordered">
             <thead class="table-active font-family font-color">
                 <tr>
                     <th>No.</th>
@@ -127,7 +127,7 @@
         </button>
     </div>
     <div class="modal-body">
-        <table class="table table-hover table-bordered" style="font-size: 0.7rem">
+        <table class="table table-hover table-bordered">
             <thead class="table-active font-family font-color">
                 <tr>
                     <th>No.</th>
@@ -157,7 +157,7 @@
         </button>
     </div>
     <div class="modal-body">
-        <table class="table table-hover table-bordered" style="font-size: 0.7rem">
+        <table class="table table-hover table-bordered">
             <thead class="table-active font-family font-color">
                 <tr>
                     <th>No.</th>
@@ -185,7 +185,7 @@
         </button>
     </div>
     <div class="modal-body">
-        <table class="table table-hover table-bordered" style="font-size: 0.7rem">
+        <table class="table table-hover table-bordered">
             <thead class="table-active font-family font-color">
                 <tr>
                     <th>No.</th>
