--- a/src/app/ejercicio/crear-ejercicio/crear-ejercicio.component.html
+++ b/src/app/ejercicio/crear-ejercicio/crear-ejercicio.component.html
@@ -21,7 +21,7 @@
         </nav>
         <div class="container">
             <div class="row">
-                <img src="{{prefijoUrlImagenes+logo[0].valor}}" class="esp-image" alt="...">
+                <img src="{{prefijoUrlImagenes+logo}}" class="esp-image" alt="...">
             </div>
             <div class="row">
                 <div class="col" align="center">
