--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex font-size" id="wrapper">
+<div class="d-flex font-family" id="wrapper">
     <div class="bg-light border-right" id="sidebar-wrapper">
         <div class="sidebar-heading">MENU </div>
         <hr>
@@ -21,7 +21,7 @@
         </nav>
         <div class="container">
             <div class="row">
-                <img src="{{prefijoUrlImagenes+logo[0].valor}}" class="esp-image" alt="...">
+                <img src="{{prefijoUrlImagenes+logo}}" class="esp-image" alt="...">
             </div>
             <div class="row">
                 <div class="col-12" align="center">
